// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation matches snapshot when mounted 1`] = `
<nav
  class="nav"
>
  <div
    class="nav__wrapper"
  >
    <nuxt-link-stub
      class="nav__name"
      to="/"
    >
      
      Jack Domleo
      
      <span
        class="sr-only"
      >
         - Home
      </span>
    </nuxt-link-stub>
     
    <nuxt-img-stub
      alt=""
      class="nav__logo"
      src="~assets/images/j-icon.svg"
    />
     
    <div
      class="nav__primary"
    >
      <ul
        class="nav__primary-list"
      >
        <li
          class="nav__item"
          hidden="hidden"
        >
          <nuxt-link-stub
            to="/"
          >
            <svg-icon-stub
              name="home"
            />
             
            <span>
              Home
            </span>
          </nuxt-link-stub>
           
          <!---->
        </li>
        <li
          class="nav__item"
        >
          <nuxt-link-stub
            to="/about"
          >
            <svg-icon-stub
              name="person"
            />
             
            <span>
              About
            </span>
          </nuxt-link-stub>
           
          <!---->
        </li>
        <li
          class="nav__item"
        >
          <nuxt-link-stub
            to="/projects"
          >
            <svg-icon-stub
              name="code"
            />
             
            <span>
              Projects
            </span>
          </nuxt-link-stub>
           
          <!---->
        </li>
        <li
          class="nav__item"
        >
          <nuxt-link-stub
            to="/blog"
          >
            <svg-icon-stub
              name="blog"
            />
             
            <span>
              Blog
            </span>
          </nuxt-link-stub>
           
          <!---->
        </li>
        <li
          class="nav__item"
        >
          <a
            href="javascript:void(0);"
          >
            <span>
              More
            </span>
             
            <svg-icon-stub
              class="nav__item-chevron"
              name="chevron-down"
            />
          </a>
           
          <ul>
            <li>
              <nuxt-link-stub
                to="/contact"
              >
                
                Contact
              
              </nuxt-link-stub>
            </li>
            <li>
              <nuxt-link-stub
                to="/newsletter"
              >
                
                Newsletter
              
              </nuxt-link-stub>
            </li>
            <li>
              <nuxt-link-stub
                to="/speaking"
              >
                
                Speaking
              
              </nuxt-link-stub>
            </li>
             
            <li
              role="presentation"
            >
              <fieldset>
                <legend>
                  Switch theme
                </legend>
                 
                <div
                  class="theme-options"
                >
                  <div
                    class="theme-option"
                  >
                    <div>
                      <input
                        id="desktop-theme-system"
                        name="desktop-theme"
                        type="radio"
                        value="system"
                      />
                       
                      <svg-icon-stub
                        name="monitor"
                      />
                    </div>
                     
                    <label
                      for="desktop-theme-system"
                    >
                      System
                    </label>
                  </div>
                   
                  <div
                    class="theme-option"
                  >
                    <div>
                      <input
                        id="desktop-theme-light"
                        name="desktop-theme"
                        type="radio"
                        value="light"
                      />
                       
                      <svg-icon-stub
                        name="sun"
                      />
                    </div>
                     
                    <label
                      for="desktop-theme-light"
                    >
                      Light
                    </label>
                  </div>
                   
                  <div
                    class="theme-option"
                  >
                    <div>
                      <input
                        id="desktop-theme-dark"
                        name="desktop-theme"
                        type="radio"
                        value="dark"
                      />
                       
                      <svg-icon-stub
                        name="moon"
                      />
                    </div>
                     
                    <label
                      for="desktop-theme-dark"
                    >
                      Dark
                    </label>
                  </div>
                </div>
              </fieldset>
            </li>
          </ul>
        </li>
      </ul>
       
      <button
        class="nav__hamburger"
        style="display: none;"
      >
        <span />
         
        <div
          class="nav__hamburger-icon"
        >
          <span />
           
          <span />
           
          <span />
           
          <span />
        </div>
         
        <span
          class="sr-only"
        >
          Show less
        </span>
      </button>
    </div>
     
    <ul
      class="nav__more"
    >
      <li>
        <nuxt-link-stub
          to="/"
        >
          <nuxt-img-stub
            alt=""
            src="~assets/images/j-icon.svg"
          />
        </nuxt-link-stub>
      </li>
       
      <li>
        <nuxt-link-stub
          to="/contact"
        >
          
          Contact
        
        </nuxt-link-stub>
      </li>
      <li>
        <nuxt-link-stub
          to="/newsletter"
        >
          
          Newsletter
        
        </nuxt-link-stub>
      </li>
      <li>
        <nuxt-link-stub
          to="/speaking"
        >
          
          Speaking
        
        </nuxt-link-stub>
      </li>
       
      <li
        role="presentation"
      >
        <fieldset>
          <legend>
            Switch theme
          </legend>
           
          <div
            class="theme-options"
          >
            <div
              class="theme-option"
            >
              <div>
                <input
                  id="mobile-theme-system"
                  name="mobile-theme"
                  type="radio"
                  value="system"
                />
                 
                <svg-icon-stub
                  name="monitor"
                />
              </div>
               
              <label
                for="mobile-theme-system"
              >
                System
              </label>
            </div>
             
            <div
              class="theme-option"
            >
              <div>
                <input
                  id="mobile-theme-light"
                  name="mobile-theme"
                  type="radio"
                  value="light"
                />
                 
                <svg-icon-stub
                  name="sun"
                />
              </div>
               
              <label
                for="mobile-theme-light"
              >
                Light
              </label>
            </div>
             
            <div
              class="theme-option"
            >
              <div>
                <input
                  id="mobile-theme-dark"
                  name="mobile-theme"
                  type="radio"
                  value="dark"
                />
                 
                <svg-icon-stub
                  name="moon"
                />
              </div>
               
              <label
                for="mobile-theme-dark"
              >
                Dark
              </label>
            </div>
          </div>
        </fieldset>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`Navigation matches snapshot when shallow mounted 1`] = `
<nav
  class="nav"
>
  <div
    class="nav__wrapper"
  >
    <nuxt-link-stub
      class="nav__name"
      to="/"
    >
      
      Jack Domleo
      
      <span
        class="sr-only"
      >
         - Home
      </span>
    </nuxt-link-stub>
     
    <nuxt-img-stub
      alt=""
      class="nav__logo"
      src="~assets/images/j-icon.svg"
    />
     
    <div
      class="nav__primary"
    >
      <ul
        class="nav__primary-list"
      >
        <li
          class="nav__item"
          hidden="hidden"
        >
          <nuxt-link-stub
            to="/"
          >
            <svg-icon-stub
              name="home"
            />
             
            <span>
              Home
            </span>
          </nuxt-link-stub>
           
          <!---->
        </li>
        <li
          class="nav__item"
        >
          <nuxt-link-stub
            to="/about"
          >
            <svg-icon-stub
              name="person"
            />
             
            <span>
              About
            </span>
          </nuxt-link-stub>
           
          <!---->
        </li>
        <li
          class="nav__item"
        >
          <nuxt-link-stub
            to="/projects"
          >
            <svg-icon-stub
              name="code"
            />
             
            <span>
              Projects
            </span>
          </nuxt-link-stub>
           
          <!---->
        </li>
        <li
          class="nav__item"
        >
          <nuxt-link-stub
            to="/blog"
          >
            <svg-icon-stub
              name="blog"
            />
             
            <span>
              Blog
            </span>
          </nuxt-link-stub>
           
          <!---->
        </li>
        <li
          class="nav__item"
        >
          <a
            href="javascript:void(0);"
          >
            <span>
              More
            </span>
             
            <svg-icon-stub
              class="nav__item-chevron"
              name="chevron-down"
            />
          </a>
           
          <ul>
            <li>
              <nuxt-link-stub
                to="/contact"
              >
                
                Contact
              
              </nuxt-link-stub>
            </li>
            <li>
              <nuxt-link-stub
                to="/newsletter"
              >
                
                Newsletter
              
              </nuxt-link-stub>
            </li>
            <li>
              <nuxt-link-stub
                to="/speaking"
              >
                
                Speaking
              
              </nuxt-link-stub>
            </li>
             
            <li
              role="presentation"
            >
              <theme-switcher-stub
                id="desktop"
              />
            </li>
          </ul>
        </li>
      </ul>
       
      <button
        class="nav__hamburger"
        style="display: none;"
      >
        <span />
         
        <div
          class="nav__hamburger-icon"
        >
          <span />
           
          <span />
           
          <span />
           
          <span />
        </div>
         
        <span
          class="sr-only"
        >
          Show less
        </span>
      </button>
    </div>
     
    <ul
      class="nav__more"
    >
      <li>
        <nuxt-link-stub
          to="/"
        >
          <nuxt-img-stub
            alt=""
            src="~assets/images/j-icon.svg"
          />
        </nuxt-link-stub>
      </li>
       
      <li>
        <nuxt-link-stub
          to="/contact"
        >
          
          Contact
        
        </nuxt-link-stub>
      </li>
      <li>
        <nuxt-link-stub
          to="/newsletter"
        >
          
          Newsletter
        
        </nuxt-link-stub>
      </li>
      <li>
        <nuxt-link-stub
          to="/speaking"
        >
          
          Speaking
        
        </nuxt-link-stub>
      </li>
       
      <li
        role="presentation"
      >
        <theme-switcher-stub
          id="mobile"
        />
      </li>
    </ul>
  </div>
</nav>
`;
